# metis

./: .gitignore  .readthedocs.yaml  LICENSE  LICENSE.md  README.md  README2.md  analytic_stuff.m  citeas.bib  double4bar_benchmark_results.txt  metis.sh  metis_error_analysis.m  metis_start.m  requirements.txt  start_metis_error_analysis.m  start_metis_single_analysis.m
classes/: Newton.m
docs/: .readthedocs.yaml  EditCommentsComputeResiTang.py  GettingStarted.rst  GettingStartet.rst  Metis.txt  Systems  Systems.rst  classes.rst  codestructure.rst  conf.py  index.rst  modules.rst  pyproject.toml  requirements.txt  some_links.md  sourceGettingStartet.rst
docs/Python Code/Integrator DocuEditor/: main.py
docs/StructureRST/: classes.rst  functions.rst
docs/StructureRST/ClassesRST/: Integrators.rst  Postprocess.rst  Solver.rst
docs/images/: METIS_Simulation_Structure.pptx
docs/source/: GettingStartet.rst  conf.py  index.rst  requirements.txt
functions/: check_user_input.m  cone.m  export_for_pydykit.m  export_results_to_txt.m  gfx_springelement.m  metis_initialise.m  metis_load.m  numerical_tangent.m  vectarrow.m
input/: README.md  README_input.md  config_input.asv  config_input.m  config_input_4P.m  config_input_4P_EMS.m  config_input_4P_rk.m  config_input_GGL_VI_analysis_withPotential.m  config_input_GGL_VI_analysis_withoutPotential.m  config_input_double_pendulum.m  config_input_error_analysis.m  config_input_error_analysis_4P.m  config_input_error_analysis_heavy_top.m  config_input_error_analysis_pendulum.m  config_input_heavy_top.m  config_input_pendulum.m  (+27 more)
(+185 files in other folders)
